# taskify_web

./: LICENSE  README.md
taskify/: Cargo.toml  data.db
taskify/src/: db.rs  main.rs  tests.rs
taskify/templates/: add.html  index.html  update.html
