[package]
name = "taskify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
env_logger = "0.10.0"
rusqlite = "0.28"
serde = {version = "1", features = ["derive"] }
log = "0.4"
anyhow = "1.0.44"
derive_more = "0.99.0"
tera = "1"
